# diplomski

./: Diplomski - prezentacija_16.9.pptx  Diplomski - prezentacija_4.3.pptx  Diplomski rad - Dušan Nikolov.doc  Izveštaj - šablon.doc  Izveštaj - šablon.docx  README.md  rezultati testiranja - fftw.xlsx
diplomski rad/: rezultati testiranja - fftw.xlsx
libsndfile_test_vs/test_OLA/: .clang-format  CMakeLists.txt  MonoStereoConversion.cpp  MonoStereoConversion.h  Performance1.psess  README.md  README.txt  ReverbEffect.cpp  ReverbEffect.h  build.sh  libfftw3f-3.lib  libfftw3l-3.lib  main.cpp  main_mono.cpp  main_stereo.cpp  test_OLA.sln  test_OLA.vcxproj  test_OLA.vcxproj.filters  test_OLA150809.vspx
libsndfile_test_vs/test_OLA/Debug/: test_OLA.ilk  vc120.idb
libsndfile_test_vs/test_OLA/Debug/test_OLA.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_OLA.lastbuildstate
libsndfile_test_vs/test_OLA/Release/: guit_logger.txt
libsndfile_test_vs/test_OLA/Release/test_OLA.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_OLA.lastbuildstate
libsndfile_test_vs/test_OLA/cmake/: FindSndFile.cmake
libsndfile_test_vs/test_OLA/lib/: libsndfile-1.lib
libsndfile_test_vs/test_OLA/src/: MonoStereoConversion.cpp  MonoStereoConversion.h  ReverbEffect.cpp  ReverbEffect.h  Timer.cpp  Timer.h  main.cpp  main_mono.cpp
libsndfile_test_vs/test_OLA_CUDA/: CUDAReverbEffect.cpp  CUDAReverbEffect.h  README.txt  (+12 more)
prezentacija/: miniUML.mdj
(+69 files in other folders)
